--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,24 @@
 jobs:
-  release:
-    name: release
+  build:
+    defaults:
+      run:
+        working-directory: jekyll
+    name: build
     runs-on: ubuntu-20.04
     steps:
       - name: git_checkout
         uses: actions/checkout@v2.3.3
+      - name: ruby_setup
+        uses: ruby/setup-ruby@v1.47.0
+        with:
+          bundler-cache: true
+          ruby-version: 2.6
+      - name: bundle_install
+        run: bundle install
+      - name: npm_install
+        run: npm clean-install
+      - name: npm_build
+        run: npm run build
 
 name: release
 
