rewrite inspect, publish, release workflows [#175390513]

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,9 +19,9 @@ jobs:
       - name: npm_build
         run: npm run build
 
-name: release
+name: publish
 
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - main
