update header, footer navigation links [#175390513]

--- a/jekyll/_data/footer_navigation.yaml
+++ b/jekyll/_data/footer_navigation.yaml
@@ -1,4 +1,6 @@
-- text: github
-  url: https://github.com/apticity/apticity
-- text: twitter
-  url: https://twitter.com/howdy_apticity
+- href: https://github.com/apticity/apticity
+  icon: fab fa-github
+  text: github
+- href: https://twitter.com/howdy_apticity
+  icon: fab fa-twitter
+  text: twitter
