update header, footer page includes [#175390513]

--- a/jekyll/_data/footer_navigation.yaml
+++ b/jekyll/_data/footer_navigation.yaml
@@ -1,6 +1,6 @@
 - href: https://github.com/apticity/apticity
   icon: fab fa-github
-  text: github
+  text: GitHub
 - href: https://twitter.com/howdy_apticity
   icon: fab fa-twitter
-  text: twitter
+  text: Twitter
