--- a/jekyll/package.json
+++ b/jekyll/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "bundle exec jekyll build",
-    "postinstall": "cp -r node_modules/@fortawesome/fontawesome-free/webfonts assets/fonts",
+    "postinstall": "cp -r node_modules/@fortawesome/fontawesome-free/webfonts/ assets/fonts/",
     "start": "bundle exec jekyll serve"
   }
 }
